# demo_template_adb

./: .gitignore  README.md  pyproject.toml
brewdat/data_engineering/: common_utils.py  data_quality_utils.py  lakehouse_utils.py  read_utils.py  transform_utils.py  write_utils.py
demos/demo_consumption/: set_project_context.py
demos/demo_consumption/gold/: load_gld_ghq_tech_demo_consumption_customer_orders.py  load_gld_ghq_tech_demo_consumption_monthly_sales_orders.py
demos/demo_consumption/synapse/: load_syn_full_ghq_tech_demo_consumption_generic.py  load_syn_incr_ghq_tech_demo_consumption_generic.py
demos/demo_integration/: set_project_context.py
demos/demo_integration/bronze/: load_brz_ghq_tech_adventureworks_sales_order_header.py  load_brz_ghq_tech_attunity_sap_generic_delta.py  load_brz_ghq_tech_attunity_sap_generic_delta_streaming.py  load_brz_ghq_tech_pracsqldb.py
demos/demo_integration/silver/: load_slv_ghq_tech_adventureworks_sales_order_header- SCD2- silver.py  load_slv_ghq_tech_adventureworks_sales_order_header.py  load_slv_ghq_tech_attunity_sap_generic.py  load_slv_ghq_tech_pracsqldb.py
docs/: table_optimizations.md  unit_tests.md
docs/_docs_generator/source/: conf.py  how_generate_docs.md  index.rst
docs/library_doc/: index.md
docs/release_workflow/: release_workflow.md
test/: spark_test.py
test/brewdat/data_engineering/: adb_test_data_quality_utils.py  adb_test_lakehouse_utils.py  adb_test_read_utils.py  adb_test_transform_utils.py  adb_test_write_utils.py  test_data_quality_utils.py  test_lakehouse_utils.py  test_read_utils.py  (+2 more)
(+24 files in other folders)
